--- a/Web.config
+++ b/Web.config
@@ -69,7 +69,7 @@
 
   
 <connectionStrings>
-  <add name="QLTDKT_Connection" connectionString="data source=DESKTOP-J7JJPQU\SQLEXPRESS;initial catalog=quanlythiduakhenthuong;persist security info=True;user id=sa;password=Vnpt@123;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-  <add name="quanlythiduakhenthuongEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-J7JJPQU\SQLEXPRESS;initial catalog=quanlythiduakhenthuong;persist security info=True;user id=sa;password=Vnpt@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  <add name="QLTDKT_Connection" connectionString="data source=TAMLV-QBH\SQLEXPRESS;initial catalog=quanlythiduakhenthuong;persist security info=True;user id=sa;password=Vnpt@123;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  <add name="quanlythiduakhenthuongEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=TAMLV-QBH\SQLEXPRESS;initial catalog=quanlythiduakhenthuong;persist security info=True;user id=sa;password=Vnpt@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 </connectionStrings>
 </configuration>
